--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "coveralls": "latest",
     "git-dirty": "latest",
-    "jest": "^22.0.0",
+    "jest": "latest",
     "lodash": "latest",
     "merge": "latest",
-    "microbundle": "^0.10.1",
+    "microbundle": "latest",
     "prettier-standard": "latest",
     "standard": "latest"
   },
